--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.471.1",
+    "mongoose": "^8.9.5",
     "next": "^15.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
