--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@uploadthing/react": "^7.1.5",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.5.1",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.471.1",
     "mongoose": "^8.9.5",
     "next": "^15.1.4",
+    "next-cloudinary": "^6.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
