--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
     "resend": "^4.1.1",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
