--- a/package.json
+++ b/package.json
@@ -14,21 +14,17 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@uploadthing/react": "^7.1.5",
     "class-variance-authority": "^0.7.1",
-    "cloudinary": "^2.5.1",
-    "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.471.1",
     "mongoose": "^8.9.5",
     "next": "^15.1.4",
-    "next-cloudinary": "^6.16.0",
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
-    "resend": "^4.1.1",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -36,6 +32,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.26.0",
     "@eslint/eslintrc": "^3",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
